bootstrap3: fixes overflow on media-popup

--- a/web/sites/all/themes/bootstrap_onlinekurslabor/css/style.css
+++ b/web/sites/all/themes/bootstrap_onlinekurslabor/css/style.css
@@ -960,3 +960,15 @@ PROJECTS
     padding-bottom: 1em;
 }
 
+/*fixing media-browser overflow*/
+.media-wrapper {
+  width: 90% !important;
+  top: 10% !important;
+}
+.media-modal-frame {
+  width: 100% !important;
+}
+.ui-dialog .ui-dialog-titlebar-close::before {
+    color: grey;
+    content: "X";
+}
